--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Browns Valley, CA 95918</p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="mb-4">AROUND THE WEB</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/jacquelinee.ege.3"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <h4 class="mb-4">AROUND THE WEB</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/jacqueline.ege.3"><i class="fab fa-fw fa-facebook-f"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
