--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@ Dressage &amp; Basic Horsemanship</p>
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Jackie is a highly trained instructor. ... download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                        <p class="pre-wrap lead">Jackie is a highly trained instructor.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Jackie is PATH certifed.  ... and add your email address to the contact form to make it fully functional!</p>
+                        <p class="pre-wrap lead">Jackie is PATH certifed. </p>
                     </div>
                 </div>
             </div>
