--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/jackie.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Learn how to ride</h1>
                 <!-- Icon Divider-->
