--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ Dressage &amp; Basic Horsemanship</p>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
                             <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
-                            <div class="text-muted">Phone</div>
+                            <div class="text-muted">Phone or Text</div>
                             <div class="lead font-weight-bold">630-809-8389</div>
                         </div>
                     </div>
