--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/jackie.jpg" alt="Jackie Ege">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/title.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Learn how to ride</h1>
+                <h1 class="masthead-heading mb-0">Learn how to ride, </h1>
+                <h1 class="masthead-heading mb-0"> or learn to ride better</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -42,8 +43,11 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Riding instruction by an expert.
-Dressage &amp; Basic Horsemanship</p>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">If you have a horse, a place to ride and are looking to grow your equine relationship this might be for you.
+                    Want to ride smarter, not harder? Are you looking for a better connection with your horse?
+                    Maybe I can help. English balanced riding lessons based on good biomechanics. 
+                    You can be a Western rider or an English rider, it's all horse to me.
+                    Feel secure while you ride, and do so effortlessly.</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
@@ -283,11 +287,33 @@ Dressage &amp; Basic Horsemanship</p>
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Jackie is a highly trained instructor.</p>
+                    <div class="col-lg-5 ml-auto">
+                        <p class="pre-wrap lead">Since visiting Wellington, Flordia for the first time in the late 1980s, I became fascinated with the sport of Dressage Which is, simply put, the training of the horse to use it's body under the rider in an optimal manor. I was so impressed by these amazing horses and riders doing these seemily effortless movements.
+                            As I started riding, I volunteered at a therapeutic riding center, Kiwanis Horses and Handicapped, Inc. in Miami. At the time they were in desperate need of a certified therapeutic riding instructor. So I learned what I needed to to become a Path International Advanced instructor (formerly NARHA), working with both physical and mental disabilities. As I write this, my favorite saying comes to mind: "it's all about ability." I worked there for 16 years running the program, which included teaching the riders, training the volunteers, writing grants, admisistrative duties, fundraising. Along the way, I met some pretty special people and horses. Always wanting to learn, I attended many Path functions and was introduced to Horsemanship with John Lyons, Centered Riding with Sally Swift, T-Touch by Linda Tellington Jones just to name a few.
+                            My riding education has been a blend of strict Classical Dressage as taught to me by Charles De Kunfy and numerous clinicians, and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Perelli, Ken McNab, John Lyons.  I find they compliment each other very well, and as long as the wellfare of the horse stays a priority, I'm always learning.</p>
                     </div>
-                    <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Jackie is PATH certifed. </p>
+                    <div class="col-lg-5 mr-auto">
+                        <p class="pre-wrap lead">Saddle fit has been my nemisis, and a driving force in the quest to ride better. I took so many lessons over the years, but sometimes discomfort and lack of balance kept me from advancing. Sore knees, and bumn pushed me to search for balanced riding. I scraped the expensive custom made dressage saddles, and got a cheap jumping saddle. Low and behold, I finally found my balance. I'm not a jumper, leave that to the younger folkes, but sometimes you have to think outside the box to find your way.              
+                           Then a couple of highly sensitive horses made sure I learned more about biomechanics and horse/human relationships. Riding effortlessly and in unison with your equine partner is a wonderful feeling. Every day we learn and grow. I am deeply grateful to all of my instructors for teaching me to ride with feel.                          
+                           After Miami, we lived in the Chicago, IL area for 13 years. There, I loved trail riding through the forrest preserves. It was also a wonderful place for attending or auditing riding clinics. From the Temple Lipizzaners and the head riders of the Spanish Riding School, to Buck Brannamn, to Custom Camp with Jake Biernbaum and Ryan Rose, to Working Equitation Clinics, the horses and I traveled to Wisconsin, Minnesota, Michigan, and all around Illinois. We also competed up to second level dressage at many local horseshows.                          
+                           My husband and I moved to Browns Valley, CA end of 2018. Here I hope to pass on some of my knowledge to others, to make their riding quest simpler and sucessful. The horse is a beautiful teacher, if one knows how to listen.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-5 ml-auto">
+                        <p class="pre-wrap">Thank you to just a few of my teachers:
+                            Charles DeKunffy--classical dressage theory and praxis
+                            Dee Jannle--SET Method (Simple Equine Teaching)
+                            Mary Wannles--Rider Biomechanics
+                            Patrick King, Pati Becker, Bent Jensen, Peter Grigoriev--Dressage
+                            Jake Biernbaum, Ryan Rose--Horsemanship
+                            Karen and Mike Boso at Karmick Acres--Working Equitation</p> 
+                    </div>
+                    <div class="col-lg-5 mr-auto">
+                        <p class="pre-wrap">Audits: 
+                            Walter Zetel, Conrad Schumacher, Andreas Hausberger (Head of the Spanish Riding School) Stephen Peters, Jan Brink, Lendon Gray,
+                             Hilda Gurney--Dressage
+                            Buck Brannaman, John Lyons, Pat Parelli--Horsemanship                        </p>
                     </div>
                 </div>
             </div>
