--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Fonts CSS-->
         <link rel="stylesheet" href="css/heading.css">
         <link rel="stylesheet" href="css/body.css">
+        <link rel="stylesheet" href="css/extra.css">
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
@@ -32,7 +33,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/title.jpg" alt="Jackie Ege">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-5 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Learn how to ride, </h1>
                 <h1 class="masthead-heading mb-0"> or learn to ride better</h1>
@@ -69,43 +70,37 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>Dressage</h1></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/dressage/logo.png" alt="Dressage"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>Horsemanship</h1></div>
+                            </div><img class="img-fluid" src="assets/img/horsemanship/one.jpg" alt="Horsemanship"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>Working Equitation</h1></div>
+                            </div><img class="img-fluid" src="assets/img/working_equitation/one.jpg" alt="Working Equitation"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/game.png" alt="Controller"/>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>Atticus</h1></div>
+                            </div><img class="img-fluid" src="assets/img/atticus/one.jpg" alt="Atticus"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/safe.png" alt="Locked Safe"/>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="Submarine"/>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>My other horses</h1></div>
+                            </div><img class="img-fluid" src="assets/img/horses/one.jpg" alt="Horses"/>
                         </div>
                     </div>
                 </div>
@@ -121,16 +116,25 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Dressage</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+                                    <p class="mb-5">Enjoy these pictures</p>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/one.jpg" alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/two.jpg" alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/three.jpg" alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/four.jpg" alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/five.jpg" alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/six.jpg" width=900 alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/seven.jpg" width=900 alt="Dressage Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/dressage/eight.jpg" width=900 alt="Dressage Photo"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">I hope you enjoyed these pictures.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -148,14 +152,18 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Horsemanship</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/one.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/two.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/three.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/four.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -175,14 +183,21 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Working Equitation</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/one.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/two.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/three.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/four.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/five.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/six.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/seven.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -202,14 +217,21 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Controller</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Atticus</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="Controller"/>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/one.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/two.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/three.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/four.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/five.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/six.JPG" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/seven.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -229,14 +251,20 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">My Other Horses</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="Locked Safe"/>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/one.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/two.JPG" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/three.JPG" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/four.JPG" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/five.jpg" alt="Photo"/>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/horses/six.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -401,13 +429,9 @@
             </div>
         </section>
         <footer class="footer text-center">
-            <div class="container">
-                <div class="row">
-                    <!-- Footer About Text-->
-                    <div class="col-lg-8">
-                        <p class="lead mb-0">Make an appointment to ride with me!</p>
-                    </div>
-                </div>
+            <div class="container">               
+                <!-- Footer About Text-->
+                <p class="lead mb-0">Make an appointment to ride with me!</p>               
             </div>
         </footer>
         <!-- Copyright Section-->
